# Copyright (c) 2015-2019, RTE (http://www.rte-france.com)
# See AUTHORS.txt
# All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, you can obtain one at http://mozilla.org/MPL/2.0/.
# SPDX-License-Identifier: MPL-2.0
#
# This file is part of Dynawo, an hybrid C++/Modelica open source time domain simulation tool for power systems.

add_subdirectory(PAR)
add_subdirectory(TL)
add_subdirectory(CRV)
add_subdirectory(FSV)
add_subdirectory(CRT)
add_subdirectory(CSTR)
add_subdirectory(DYD)
add_subdirectory(EXTVAR)
add_subdirectory(JOB)
add_subdirectory(LEQ)
